--- a/qt_dotgraph/CMakeLists.txt
+++ b/qt_dotgraph/CMakeLists.txt
@@ -7,5 +7,7 @@ catkin_package()
 catkin_python_setup()
 
 if (CATKIN_ENABLE_TESTING)
-  catkin_add_nosetests(test)
+  catkin_add_nosetests(test/pygraphviz_factory_test.py)
+  catkin_add_nosetests(test/pydot_factory_test.py)
+  catkin_add_nosetests(test/dot_to_qt_test.py)
 endif()
