--- a/qt_gui/CMakeLists.txt
+++ b/qt_gui/CMakeLists.txt
@@ -10,4 +10,14 @@ ament_python_install_package(${PROJECT_NAME}
 install(DIRECTORY resource
   DESTINATION share)
 
+if(BUILD_TESTING)
+  find_package(ament_cmake_pytest REQUIRED)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+
+  ament_add_pytest_test(${PROJECT_NAME} test
+    APPEND_ENV PYTHONPATH=${CMAKE_CURRENT_BINARY_DIR}
+    TIMEOUT 90)
+endif()
+
 ament_package()
